Still working on database (wip)

--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,16 @@
 	</div>
 	
 	<div class="message-banner" id="banner-text"></div>
+	
+	<hr class="solid">
+	
+	<table id="album-list">
+		<tr>
+			<th>Artist</th>
+			<th>Album</th>
+			<th></th>
+		</tr>
+	</table>
 </body>
 </html>
 
