Now checks for duplicates and counts number in DB

--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,10 @@
 	
 	<hr class="solid">
 	
+	<div class="row-container">
+		<div>CD:</div><div id="cd-amount">0</div><div>Digital:</div><div id="digital-amount">0</div><div>Vinyl:</div><div id="vinyl-amount">0</div>
+	</div>
+	
 	<table id="album-list">
 		<tr>
 			<th>Artist</th>
