--- a/app/index.html
+++ b/app/index.html
@@ -35,13 +35,15 @@
 		<div>CD:</div><div id="cd-amount">0</div><div>Digital:</div><div id="digital-amount">0</div><div>Vinyl:</div><div id="vinyl-amount">0</div>
 	</div>
 	
-	<table id="album-list">
-		<tr>
-			<th>Artist</th>
-			<th>Album</th>
-			<th></th>
-		</tr>
-	</table>
+	<div class="row-container">
+		<table id="album-list">
+			<tr>
+				<th>Artist</th>
+				<th>Album</th>
+				<th>Medientyp</th>
+			</tr>
+		</table>
+	</div>
 </body>
 </html>
 
