Better table and some other design changes

--- a/app/index.html
+++ b/app/index.html
@@ -36,13 +36,19 @@
 	</div>
 	
 	<div class="row-container">
-		<table id="album-list">
-			<tr>
-				<th>Artist</th>
-				<th>Album</th>
-				<th>Medientyp</th>
-			</tr>
-		</table>
+		<div class="table-container" id="album-list-container">
+			<table id="album-list">
+				<thead>
+				<tr>
+					<th><div>Artist</div></th>
+					<th><div>Album</div></th>
+					<th class="th-small"><div class="div-small">Typ</div></th>
+				</tr>
+				</thead>
+				<tbody>
+				</tbody>
+			</table>
+		</div>
 	</div>
 </body>
 </html>
